--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CV Shlokova Anna</title>
-    <link href="/index.css" rel="stylesheet"/>
+    <link href="./index.css" rel="stylesheet"/>
 </head>
 
 <body>
