--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <div class="card">
             <h3>Мои проекты:</h3>
             <ul class="list">
-                <li>Пока что в разработке</li>
+                <li><a target="_blank" href="https://github.com/Shlokova/notes" > Заметки по JS, React, CSS, HTML</a>
+                    (Пока что в разработке)</li>
             </ul>
         </div>
     </div>
