--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                 <div>JavaScript</div>
                 <div> HTML5</div>
                 <div>CSS3</div>
+                <div>LESS</div>
                 <div>React</div>
+                <div>Redux</div>
+                <div>Webpack</div>
                 <div>TypeScript</div>
                 <div>Figma</div>
                 <div>Git</div>
@@ -84,7 +87,7 @@
             <h3>Мои проекты:</h3>
             <ul class="list">
                 <li><a target="_blank" href="https://github.com/Shlokova/notes" > Заметки по JS, React, CSS, HTML</a>
-                    (Пока что в разработке)</li>
+                   </li>
             </ul>
         </div>
     </div>
