--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="card">
             <h3>Мои проекты:</h3>
             <ul class="list">
-                <li><a target="_blank" href="https://github.com/Shlokova/notes" > Заметки по JS, React, CSS, HTML</a>
+                <li><a target="_blank" href="https://react-notes-12510.web.app/notes" > Заметки по JS, React, CSS, HTML</a>
                    </li>
             </ul>
         </div>
