--- a/index.html
+++ b/index.html
@@ -77,18 +77,11 @@
                         <td>IT школа beeinterns</td>
                         <td>2022-...</td>
                     </tr>
-                    <!-- <tr>
-                        <td>Stepic</td>
-                        <td>
-                            <div>JavaScript для начинающих</div>
-                            <div>Веб-разработка для начинающих: HTML и CSS</div>
-                            <div>
-                                Основы Frontend расработки с помощью библиотеки
-                                ReactJS
-                            </div>
-                        </td>
-                        <td>2021</td>
-                    </tr> -->
+                    <tr>
+                        <td>Tinkoff</td>
+                        <td>Fintech frontend</td>
+                        <td>2022-...</td>
+                    </tr>
                     <tr>
                         <td>Учебники и документация</td>
                         <td>
@@ -121,7 +114,17 @@
                     </tr>
                 </table>
             </div>
-
+            <div class="card">
+                <h3>Опыт работы:</h3>
+                <table class="table">
+                    <tr>
+                        <td>ИТМО</td>
+                        <td>Центр учебной аналитики</td>
+                        <td>Frontend developer</td>
+                        <td>02.2022 - ...</td>
+                    </tr>
+                </table>
+            </div>
             <div class="card">
                 <h3>Ключевые навыки</h3>
                 <div class="skills">
@@ -130,6 +133,7 @@
                     <div>HTML5</div>
                     <div>CSS3</div>
                     <div>LESS</div>
+                    <div>SCSS</div>
                     <div>React</div>
                     <div>Vue</div>
                     <div>Webpack</div>
@@ -185,6 +189,14 @@
                         >
                             Участие в марафоне по frontend разработке</a
                         >
+                    </li>
+                    <li>
+                        <a
+                            target="_blank"
+                            href="https://shlokova.github.io/NASA-Insta-app/"
+                        >
+                            NASA instagram (тестовое задание)
+                        </a>
                     </li>
                 </ul>
             </div>
